# wambam

./: .dockstore  .dockstore.yml  .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.md
data/: test_alignments.bam  test_alignments_eqx.bam  test_read_chm13_chr5.fasta
inc/: Bam.hpp  Filesystem.hpp  IterativeSummaryStats.hpp  Sam.hpp
scripts/: identity_distribution.samp1.csv  identity_distribution.samp2.csv  input_samples.tsv  length_distribution.samp1.csv  length_distribution.samp2.csv  make_plots.R  make_plots_multisamples.R  plot_alignments.py
src/: Bam.cpp  IterativeSummaryStats.cpp  Sam.cpp
src/executable/: wam.cpp
testdata/: reads_minimap2.bam
wdl/: tasks.wdl  testdata_input.json  testdata_input.ubam.json  workflow.wdl
